--- a/About_Page/About_Page.css
+++ b/About_Page/About_Page.css
@@ -1,1 +1,18 @@
+img {
+    width: 540px;
+    /* you can use % */
+    height: auto;
+}
 
+.container {
+    position: relative;
+    text-align: center;
+    color: white;
+}
+
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
