--- a/Hobbies_Page/Hobbies_Page.css
+++ b/Hobbies_Page/Hobbies_Page.css
@@ -24,3 +24,52 @@ nav a:hover {
     background-color: #1e67c9;
     color: #3FF3FC;
 }
+
+.games {
+    position: relative;
+    text-align: center;
+    color: white;
+    background-image: url("/Hobbies_Page/images/Age-of-Empires-III.jpg");
+    height: 300px;
+    background-size: cover;
+}
+
+.videogames {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.reading {
+    position: relative;
+    text-align: center;
+    color: black;
+    background-image: url("/Hobbies_Page/images/bookbanner.jpg");
+    height: 300px;
+    background-size: cover;
+}
+
+.books {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.baking {
+    position: relative;
+    text-align: center;
+    color: saddlebrown;
+    background-image: url("/Hobbies_Page/images/baking.jpg");
+    height: 300px;
+    background-size: cover;
+    text-shadow: 1px 1px wheat;
+}
+
+.cookies {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%)
+}
