--- a/Hobbies_Page/Hobbies_Page.css
+++ b/Hobbies_Page/Hobbies_Page.css
@@ -73,3 +73,8 @@ nav a:hover {
     left: 50%;
     transform: translate(-50%, -50%)
 }
+
+h1 {
+    text-align: center;
+    text-decoration: underline;
+}
