--- a/Hobbies_Page/Hobbies_Page.css
+++ b/Hobbies_Page/Hobbies_Page.css
@@ -78,3 +78,36 @@ h1 {
     text-align: center;
     text-decoration: underline;
 }
+
+footer {
+    overflow: hidden;
+    background-color: #0028db;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    border: solid 2px #dbba44;
+}
+
+footer p.copyright {
+    font-family: 'Lato', sans-serif;
+    color: white;
+    font-weight: 400;
+    float: left;
+    padding-right: 10px;
+    font-style: italic;
+}
+
+footer a {
+    font-family: 'Lato', sans-serif;
+    color: white;
+    font-weight: 400;
+    float: right;
+    padding-right: 10px;
+    font-style: italic;
+    text-decoration: none;
+}
+
+footer a:hover {
+    background-color: #1e67c9;
+    color: #3FF3FC;
+}
