fixed footer size

--- a/About_Page/About_Page.css
+++ b/About_Page/About_Page.css
@@ -47,7 +47,7 @@ footer {
     background-color: #0028db;
     position: fixed;
     bottom: 0;
-    width: 100%;
+    width: 1375px;
     border: solid 2px #dbba44;
 }
 
