--- a/Hobbies_Page/Hobbies_Page.css
+++ b/Hobbies_Page/Hobbies_Page.css
@@ -34,12 +34,6 @@ nav a:hover {
     background-size: cover;
 }
 
-.videogames {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
 
 .reading {
     position: relative;
@@ -50,12 +44,6 @@ nav a:hover {
     background-size: cover;
 }
 
-.books {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
 
 .baking {
     position: relative;
@@ -67,12 +55,6 @@ nav a:hover {
     text-shadow: 1px 1px wheat;
 }
 
-.cookies {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%)
-}
 
 h1 {
     text-align: center;
@@ -117,4 +99,30 @@ div.boxthree {
     background-color: #ffffff;
     border: 1px solid black;
     opacity: 0.6;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%)
+}
+
+div.boxtwo {
+    margin: 30px;
+    background-color: #ffffff;
+    border: 1px solid black;
+    opacity: 0.6;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+div.boxone {
+    margin: 30px;
+    background-color: #ffffff;
+    border: 1px solid black;
+    opacity: 0.6;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
