--- a/Hobbies_Page/Hobbies_Page.css
+++ b/Hobbies_Page/Hobbies_Page.css
@@ -106,7 +106,8 @@ div.boxthree {
 }
 
 div.boxtwo {
-    margin: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     background-color: #ffffff;
     border: 1px solid black;
     opacity: 0.6;
