--- a/Hobbies_Page/Hobbies_Page.css
+++ b/Hobbies_Page/Hobbies_Page.css
@@ -108,7 +108,7 @@ div.boxthree {
 div.boxtwo {
     margin-top: 1px;
     margin-bottom: 1px;
-    background-color: #ffffff;
+    background-color: #ffffff98;
     border: 1px solid black;
     opacity: 0.6;
     position: absolute;
