--- a/About_Page/About_Page.css
+++ b/About_Page/About_Page.css
@@ -13,6 +13,9 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-align: left;
+    font-size: large;
+    text-shadow: black 2px;
 }
 
 body {
