--- a/About_Page/About_Page.css
+++ b/About_Page/About_Page.css
@@ -10,8 +10,8 @@
 
 .centered {
     position: absolute;
-    top: 50%;
-    left: 50%;
+    /*top: 50%;
+    left: 50%;*/
     transform: translate(-50%, -50%);
     text-align: left;
     font-size: large;
