--- a/Hobbies_Page/Hobbies_Page.css
+++ b/Hobbies_Page/Hobbies_Page.css
@@ -60,6 +60,7 @@ nav a:hover {
 h1 {
     text-align: center;
     text-decoration: underline;
+    font-family: 'Lato', 'Georgia', 'Times New Roman', 'Times', 'serif';
 }
 
 footer {
@@ -72,7 +73,7 @@ footer {
 }
 
 footer p.copyright {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Lato', 'Georgia', 'Times New Roman', 'Times', 'serif';
     color: white;
     font-weight: 400;
     float: left;
@@ -81,7 +82,7 @@ footer p.copyright {
 }
 
 footer a {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Lato', 'Georgia', 'Times New Roman', 'Times', 'serif';
     color: white;
     font-weight: 400;
     float: right;
@@ -130,4 +131,9 @@ div.boxone {
     left: 50%;
     transform: translate(-50%, -50%);
 
+}
+
+p {
+    font-family: 'Lato', 'Georgia', 'Times New Roman', 'Times', 'serif';
+    font-size: medium;
 }
