--- a/Hobbies_Page/Hobbies_Page.css
+++ b/Hobbies_Page/Hobbies_Page.css
@@ -122,4 +122,5 @@ div.boxone {
 p {
     font-family: 'Lato', 'Georgia', 'Times New Roman', 'Times', 'serif';
     font-size: medium;
+    color: black;
 }
